Netdisco/share/views/plugin/portinfo/portinfo.css
/* Make space for edit icon on hover */
#dp-data-table .york-port-info[contenteditable]{
  margin-right: 25px;
}

/* Color dirty cells  */
#dp-data-table .nd_portinfo-data-dirty{
  border: 1px solid #000;
  font-style: italic;
}

/* Put nbsp placeholder for editable cells on focus 
   for empty cells because of ff bug */
#dp-data-table .york-port-info[contenteditable]:focus:empty:before {
  content: "\00a0";
}

#dp-data-table .york-port-info{
  min-width: 50px;
}

#dp-data-table .york-port-info[data-column=building]{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100px;
  margin-right: 0;
}

#dp-data-table td:hover .york-port-info[data-column=building],
#dp-data-table .york-port-info[data-column=building]:focus
{
  overflow: visible;
  white-space: normal;
}

#dp-data-table td:hover .york-port-info[data-column=building][contenteditable],
#dp-data-table .york-port-info[data-column=building]:focus[contenteditable]
{
  margin-right: 25px;
}

#dp-data-table .york-port-info-last-updated-by{
  min-width: 100px;
}
#dp-data-table .york-port-info-last-updated{
  min-width: 100px;
  overflow: hidden;
  line-height: 1em;
  height: 1em;
  max-width: 100px;
  text-overflow: ellipsis;
}
#dp-data-table td:hover .york-port-info-last-updated {
  line-height: inherit;
  height: auto;
}

/* style for edit icon that appears on hover */
.nd_portinfo-edit-icon {
  float: right;
  cursor: pointer;
  /* don't increase the height of the row when hovering
     Problem because of silly firefox bug.. */
  line-height: 80%;
}

/* make Save Port Info button float on the right */
#dp-data-table_submit-port-info {
  float: right;
  margin-right: 10px;
}

/* allow tooltips to work despite datatables plugin 
   positioning for columns */
#dp-data-table_wrapper .DTFC_LeftBodyWrapper,
#dp-data-table_wrapper .DTFC_LeftBodyLiner{
  position: static !important;
}


/* integrate port location search with netdisco */
#nd_location-port-search {
  margin-right: 10px;
  color: white;
}
#nd_location-port-search form {
  margin-bottom: 0;
}

.nd_location-port-search-additional {
  position:absolute;
  left: -5px;
  margin-top: 10px;
  
  padding: 5px;
  border-radius: 5px;
  background-color: rgba(50, 50, 150, 0.7);
}

.nd_location-port-search-additional::before {
  content: "";
  display: inline-block;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-bottom: 7px solid rgba(50, 50, 50, 0.7);
  position: absolute;
  top: -7px;
  left: 9px;
}
.nd_location-port-search-additional input[type="text"]{
  display: block;
  margin-top: 5px;
  margin-bottom: 5px;
  padding-left: 15px;
  padding-right: 15px;
}
.nd_location-port-search-additional label.error{
  color: #FF6;
}
#advanced-port-search-btn {
  /* copy appearance of port input */
  padding: 4px 14px;
  width: 206px;
  height: 18px;
  border-radius: 15px;
  
  /* copy search button appearance */
  background-image: linear-gradient(to bottom, #444, #222);
  background-repeat: repeat-x;
  border-width: 1px;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  color: #CCC;

  user-select: none;
  text-align: center;
  cursor: default;
}

/* format the form close button to the left */
.location-port-search-close-btn {
  padding: 3px;
  position: absolute;
  left: -25px;
  top: 5px;
}

/* auto suggest styling */
.nd_suggest-item {
  border: 1px solid #EEEEEE;
  border-radius: 5px;
}

.nd_suggest-match {
  color: #777;
  font-size: 75%;
}
.nd_suggest-building-number {
  color: #777;
}

.nd_suggest-match-highlight {
  font-weight: bold;
  color: black;
}

.port-building-form-reset {
  color: #AAC;
  margin-top: -3px;
  margin-bottom: -3px;
  font-size: 80%;
  padding-left: 15px;
}


/* Group checkboxes with their filters in sidebar */
.nd_filter-checkbox {
  margin-top: -7px;
}

/* fix for jQuery chosen plugin when selects are hidden */
.chosen-container.chosen-container-single,
.chosen-container.chosen-container-multi {
  width: 163px !important;
}

/* nav bar width when the screen is too small */
@media (min-width: 801px) and (max-width: 1200px) {
  body {
    padding-top: 80px;
  }
}
@media (max-width: 800px) {
  body {
    padding-top: 0px;
  }
  
  .navbar {
    position: static;
  }
}

/* upload CSV feature styling */
#nd_csv_upload-icon,
#nd_csv-upload-modal,
#nd_csv-upload-modal-body-loading,
#nd_csv-upload-modal-body-success,
#nd_csv-upload-modal-body-error {
  display: none;
}

/* inactive tabs styling on port search */
.nav-tabs > li[disabled]{
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  color: #999;
}

